Changed <br> to \n + whitespace preserve, fixes #2

--- a/input/style.css
+++ b/input/style.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=latin-ext');
 
 body {
-	font-family: 'Roboto Mono', monospace;
-	padding-left: 6px;
+    font-family: 'Roboto Mono', monospace;
+    padding-left: 6px;
 }
 
 h1, h2, p {
-	margin: 0px;
+    margin: 0px;
 }
 
 .comment {
-	color: #269226;
+    color: #269226;
 }
 
 .keyword {
-	color: #0e52d1;
-	position: relative;
+    color: #0e52d1;
+    position: relative;
     display: inline-block;
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
@@ -29,9 +29,10 @@ h1, h2, p {
     padding: 6px;
     border-radius: 6px;
     position: absolute;
-	top: -5px;
+    top: -5px;
     left: 105%; 
     z-index: 1;
+    white-space: pre;
 }
 
 .keyword .tooltiptext::after {
